# mano-afk

./: .gitignore  LICENSE  README.md  mano-afk.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
Formula/: mano-afk.rb
benchmark/: README.md  run_benchmark.py  tasks.json
scripts/: config.py  executor.py  main.py  task.py  utils.py  vlm_engine.py
scripts/agents/: __init__.py  base.py  cloud.py  local.py
scripts/judges/: __init__.py  cloud.py  local.py
scripts/ui/: __init__.py  overlay.py
skill/claude/: SKILL.md
skill/openclaw/: SKILL.md
skill/references/: build-pipeline.md  prd-template.md  preferences.md  project-structure.md  readme-template.md  report-template.md  rules.md
